// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children props 1`] = `
<RCTSafeAreaView
  style={
    Array [
      undefined,
    ]
  }
>
  <View />
</RCTSafeAreaView>
`;

exports[`uses the specified backgroundColor if provided 1`] = `
<RCTSafeAreaView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
